[tool.poetry]
name = "mlflowdockerised"
version = "0.0.1"
description = ""
authors = ["Emeric <emeric.dynomant@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "^1.18.0"
sklearn = "^0.0"
numpy = "^1.21.0"
pandas = "^1.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
